# wffn-ems

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
src/: main.cpp
src/client/: client_data_interface.hpp  dialog.hpp  dialog_controller.hpp  dialog_id.hpp  dialog_pool.hpp  employees_view.hpp  menu.cpp  menu.hpp  menu_contoller.cpp  menu_controller.hpp  menu_pool.cpp  menu_pool.hpp
src/client/dialog/: add_employee_dialog.cpp  add_employee_dialog.hpp  employee_profile_dialog.cpp  employee_profile_dialog.hpp  financial_report_dialog.cpp  financial_report_dialog.hpp  show_employee_dialog.cpp  show_employee_dialog.hpp
src/core/: core.hpp  finance_system.hpp  hr_system.hpp
src/finance/: finance_presenter.cpp  finance_presenter.hpp
src/hr/: employee.h  employee.hpp  employee_collection.hpp
src/view/: employees.hpp
